# src/routes/accounts.route.ts
@@ -1,7 +1,9 @@
 import { AccountController } from '@/controllers/accounts.controller';
 import { AuthMiddleware } from '@/middlewares/auth.middleware';
+import { ProfileDto } from '@/dtos/profiles.dto';
 import { Router } from 'express';
 import { Routes } from '@interfaces/routes.interface';
+import { ValidationMiddleware } from '@/middlewares/validation.middleware';
 
 export class AccountRoute implements Routes {
   public path = '/accounts';
@@ -14,6 +16,8 @@ export class AccountRoute implements Routes {
 
   private initializeRoutes() {
     this.router.get(`${this.path}`, AuthMiddleware, this.account.getAccountDetails);
+    this.router.post(`${this.path}/:id`, AuthMiddleware, ValidationMiddleware(ProfileDto), this.account.addPriceListItem);
+
     this.router.put(`${this.path}/:id`, AuthMiddleware, this.account.updatePriceList);
 
     this.router.delete(`${this.path}/:id`, AuthMiddleware, this.account.deletePrice);
